[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiograpi"
version = "1.3.17"
authors = [
    { name = "Mark Subzeroid", email = "143403577+subzeroid@users.noreply.github.com" },
]
description = "Asynchronous Instagram Private API wrapper"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "instagram private api",
    "instagram-private-api",
    "instagram api",
    "instagram-api",
    "instagram",
    "instagram-scraper",
    "instagram-client",
    "instagram-stories",
    "instagram-feed",
    "instagram-reels",
    "instagram-insights",
    "downloader",
    "uploader",
    "videos",
    "photos",
    "albums",
    "igtv",
    "reels",
    "stories",
    "pictures",
    "instagram-user-photos",
    "instagram-photos",
    "instagram-metadata",
    "instagram-downloader",
    "instagram-uploader",
    "instagram-note",
    "asyncio",
    "async",
    "aiograpi",
]
dependencies = [
    "httpx==0.28.1",
    "orjson==3.11.8",
    "PySocks==1.7.1",
    "pydantic==2.12.5; sys_platform == 'android'",
    "pydantic>=2.12.5,<2.14; sys_platform != 'android'",
    "pycryptodomex==3.23.0",
    "zstandard==0.25.0",
    "Pillow>=12.2.0",
]

[project.urls]
Homepage = "https://github.com/subzeroid/aiograpi"
Documentation = "https://subzeroid.github.io/aiograpi/"
Repository = "https://github.com/subzeroid/aiograpi"
Issues = "https://github.com/subzeroid/aiograpi/issues"
Changelog = "https://github.com/subzeroid/aiograpi/blob/main/CHANGELOG.md"

[project.optional-dependencies]
curl = [
    "curl-adapter>=1.2.1",
]
video = [
    # MoviePy 2.2.1 still declares pillow<12, while aiograpi requires Pillow 12.2.0
    # for security fixes. Install MoviePy itself with --no-deps after this extra.
    "decorator>=4.0.2,<6.0",
    "imageio>=2.5,<3.0",
    "imageio-ffmpeg>=0.2.0",
    "numpy>=1.25.0",
    "proglog<=1.0.0",
    "python-dotenv>=0.10",
]
test = [
    "mypy==1.20.2",
    "Pillow==12.2.0",
    "bandit==1.9.4",
    "decorator>=4.0.2,<6.0",
    "imageio>=2.5,<3.0",
    "imageio-ffmpeg>=0.2.0",
    "pip-audit==2.10.0",
    "mike==2.2.0",
    # mike implicitly imports pkg_resources from setuptools.
    "setuptools==82.0.1",
    "markdown-include==0.8.1",
    "mkdocs-material==9.7.6",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocstrings[python]==1.0.4",
    "numpy>=1.25.0",
    "pre-commit==4.6.0",
    "proglog<=1.0.0",
    "pytest-xdist==3.8.0",
    "pytest==9.0.3",
    "python-dotenv>=0.10",
    "ruff==0.15.16",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aiograpi*"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".eggs",
    ".git",
    ".venv",
    "build",
    "dist",
    "env",
    "site",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "I"]

[tool.bandit]
exclude_dirs = ["*venv*", "*env*", "*scratch*"]
skips = ["B101", "B105", "B311", "B303", "B306", "B501"]
